# oimalib

./: .gitignore  README.md  example.py  pyproject.toml  setup.cfg  setup.py
.github/workflows/: bleeding-edge.yaml  ci.yml  type-checking.yaml
doc/DATA/: example.py  model_run_faster.py
oimalib/: __init__.py  binary.py  complex_models.py  data_processing.py  data_selection.py  fitting.py  fourier.py  modelling.py  models.py  oifits.py  plotting.py  tools.py
oimalib/fit/: dpfit.py  dpfunc.py
oimalib/tests/: conftest.py  test_dataprocessing.py  test_fitting.py  test_io.py  test_modelling.py  test_plot.py  tests_io.py
optimal/: __init__.py  binary_integrator.py  tools.py
optimal/fit/: dpfit.py
