[metadata]
name = oimalib
version = 0.4.0
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/DrSoulain/oimalib
author = Anthony Soulain
author_email = anthony.soulain@univ-grenoble-alpes.fr
license = GPL-3.0
license_file = LICENSE
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Science/Research
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    License :: OSI Approved :: MIT License
    Operating System :: MacOS :: MacOS X
    Operating System :: POSIX :: AIX
    Operating System :: POSIX :: Linux
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Topic :: Scientific/Engineering :: Astronomy
    Typing :: Typed

[options]
packages = find:
install_requires =
    astropy
    astroquery
    corner
    emcee
    matplotlib
    munch
    numpy
    pandas
    pytest
    scipy
    seaborn
    termcolor
    tqdm
    uncertainties
python_requires = >=3.8

[options.packages.find]
exclude =
    doc*

[options.extras_require]
dev =
    pytest
    pytest-cov
typecheck =
    mypy==0.931
    types-setuptools~=57.4
    types-tabulate==0.8.5
    types-termcolor~=1.1

[options.package_data]
oimalib =
    internal_data/*.txt
    py.typed

[flake8]
exclude = *__init__.py
ignore =
    E203,
    E501,
    W503,
